made browse page tabs

--- a/www/index.html
+++ b/www/index.html
@@ -21,7 +21,7 @@
   </head>
   <body ng-app="starter">
       
-    <ion-nav-bar class="bar-positive">
+    <ion-nav-bar class="bar-positive has-tabs-top">
         <ion-nav-back-button class="button-clear">
             <i class="ion-arrow-left-c"></i> Back
         </ion-nav-back-button>
