--- a/www/index.html
+++ b/www/index.html
@@ -22,7 +22,7 @@
   <body ng-app="starter">
       
     <ion-nav-bar class="bar-positive">
-        <ion-nav-back-button class="button icon-left ion-chevron-left button-clear button-dark">
+        <ion-nav-back-button>
             
         </ion-nav-back-button>
     </ion-nav-bar>
