--- a/www/index.html
+++ b/www/index.html
@@ -7,6 +7,7 @@
 
     <!-- compiled css output -->
     <link href="css/ionic.app.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
@@ -20,13 +21,13 @@
     <script src="js/services.js"></script>
   </head>
   <body ng-app="starter">
-      
+
     <ion-nav-bar class="bar-positive">
         <ion-nav-back-button>
-            
+
         </ion-nav-back-button>
     </ion-nav-bar>
-  
+
     <ion-nav-view></ion-nav-view>
 
   </body>
