--- a/www/index.html
+++ b/www/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-    <title>UMKC EBoard</title>
+    <title>Urban Art</title>
 
     <!-- compiled css output -->
     <link href="css/ionic.app.css" rel="stylesheet">
@@ -19,14 +19,13 @@
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
+    
+    <!-- ANGULAR MAP -->
+        <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script> 
+        <script src="http://rawgit.com/allenhwkim/angularjs-google-maps/master/build/scripts/ng-map.min.js"></script>
+   
   </head>
   <body ng-app="starter">
-
-    <ion-nav-bar class="bar-positive">
-        <ion-nav-back-button>
-
-        </ion-nav-back-button>
-    </ion-nav-bar>
 
     <ion-nav-view></ion-nav-view>
 
