--- a/www/index.html
+++ b/www/index.html
@@ -11,19 +11,18 @@
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
-
+    
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
+    <!-- google maps javascript -->
+    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
+  
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
     
-    <!-- ANGULAR MAP -->
-        <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script> 
-        <script src="http://rawgit.com/allenhwkim/angularjs-google-maps/master/build/scripts/ng-map.min.js"></script>
-   
   </head>
   <body ng-app="starter">
 
