--- a/www/index.html
+++ b/www/index.html
@@ -15,9 +15,10 @@
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
-    <!-- google maps javascript -->
-    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
-  
+    
+<script src="//maps.google.com/maps/api/js"></script>
+<script src="//rawgit.com/allenhwkim/angularjs-google-maps/master/build/scripts/ng-map.min.js"></script>
+
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
