FIXED ANDROID VERSION TO FUNCTION THE SAME AS THE IOS ONE. sCROLLING IS STRANGE THOUGH

--- a/www/index.html
+++ b/www/index.html
@@ -22,7 +22,7 @@
   </head>
   <body ng-app="starter">
 
-    <ion-nav-bar class="bar-positive">
+    <ion-nav-bar class="bar-positive" align-title="center">
         <ion-nav-back-button>
 
         </ion-nav-back-button>
