--- a/www/index.html
+++ b/www/index.html
@@ -19,6 +19,8 @@
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
+    <script src="lib/lodash/dist/lodash.min.js"></script>
+    <script src="lib/angular-google-maps/dist/angular-google-maps.min.js"></script>
   </head>
   <body ng-app="starter">
 
