--- a/www/scanqr.html
+++ b/www/scanqr.html
@@ -32,6 +32,9 @@ and open the template in the editor.
     
     </head>
     <body> 
+        <script>
+            console.log(Math.floor(Date.now() / 1000));
+        </script>
         <p>
             Take picture of the QR code
           <input type="file" accept="image/*" capture="camera" id="input">
