--- a/www/index.html
+++ b/www/index.html
@@ -22,7 +22,8 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
-    <script src="js/controllers.js"></script>
+    <script src="js/mapCtrl.js"></script>
+    <script src="js/pagesCtrl.js"></script>
     <script src="js/services.js"></script>
     
   </head>
