--- a/www/pages/locations.html
+++ b/www/pages/locations.html
@@ -18,7 +18,7 @@
                 <p name="address" style="font-size:.8em;">
                     {{loc.address}}<br/>
                 </p>
-                <div class="text-center" style="font-size:.8em;">
+                <div class="text-center" style="border-color:#28a54c;border-width:1px;border-style:ridge;font-size:.8em;">
                     Lichen Available: <b>{{loc.avail}}</b>
                 </div>
                 <div class="row">
@@ -26,7 +26,11 @@
                         <span>{{time.days}}</span><br/><b>{{time.hours}}</b>
                     </span>
                 </div>
+                <p>
+                    enter
+                </p>
                 <div class="text-right">
+                    <span style="font-size:.9em">website:</span>
                     <a target="_blank" href="{{loc.url}}">
                         {{loc.website}}
                     </a>
