--- a/www/pages/location.html
+++ b/www/pages/location.html
@@ -7,59 +7,65 @@
                   ui-sref="home" i></button>
     </ion-header-bar>
     <ion-content>
-        <div class="row">
-            <div class="col col-50">
-                <div ng-repeat="colony in discovered"><div ng-if="$even" class="row">
-                    <div class="list card" style="margin:0; width:100%; height:100%;">
-                        <a class="item item-image" ui-sref="idkcolony({lid: {{loc.id}}, cid:{{colony.id}}})">
-                            <img ng-src="img/colonies/{{colony.imgsil}}.jpg" style="height:8em;width:10em;">
-                        </a>
-                        <p class="item item-text-wrap" style="border:none; padding: 3px; text-align: center;">
-                            {{colony.name}}
-                        </p>
-                    </div>
-                </div></div>
-            </div>
-            <div class="col col-50">
-                <div ng-repeat="colony in discovered"><div ng-if="$odd" class="row">
-                    <div class="list card" style="margin:0; width:100%; height:100%;">
-                        <a class="item item-image" ui-sref="idkcolony({lid: {{loc.id}}, cid:{{colony.id}}})">
-                            <img ng-src="img/colonies/{{colony.imgsil}}.jpg" style="height:8em;width:10em;">
-                        </a>
-                        <p class="item item-text-wrap" style="border:none; padding: 3px; text-align: center;">
-                            {{colony.name}}
-                        </p>
-                    </div>
-                </div></div>
-            </div>
+        <div id="notAvail" class="text-center hidden">
+            The lichen at this location will be available on<br/>
+            <h3>{{loc.avail}}</h3>
         </div>
-        <div class="item item-divider">
-            Discovered Lichens
-        </div>
-        <div class="row">
-            <div class="col col-50">
-                <div ng-repeat="colony in undiscovered"><div ng-if="$even" class="row">
-                    <div class="list card" style="margin:0; width:100%; height:100%;">
-                        <a class="item item-image" ui-sref="colony({lid: {{loc.id}}, cid:{{colony.id}}})">
-                            <img ng-src="img/colonies/{{colony.img}}.jpg" style="height:8em;width:10em;">
-                        </a>
-                        <p class="item item-text-wrap" style="border:none; padding: 3px; text-align: center;">
-                            {{colony.name}}
-                        </p>
-                    </div>
-                </div></div>
+        <div id="Avail" class="hidden">
+            <div class="row">
+                <div class="col col-50">
+                    <div ng-repeat="colony in discovered"><div ng-if="$even" class="row">
+                        <div class="list card" style="margin:0; width:100%; height:100%;">
+                            <a class="item item-image" ui-sref="colony.unknown({lid: {{loc.id}}, cid:{{colony.id}}})">
+                                <img ng-src="img/colonies/{{colony.imgsil}}.jpg" style="height:8em;width:10em;">
+                            </a>
+                            <p class="item item-text-wrap" style="border:none; padding: 3px; text-align: center;">
+                                {{colony.name}}
+                            </p>
+                        </div>
+                    </div></div>
+                </div>
+                <div class="col col-50">
+                    <div ng-repeat="colony in discovered"><div ng-if="$odd" class="row">
+                        <div class="list card" style="margin:0; width:100%; height:100%;">
+                            <a class="item item-image" ui-sref="colony.unknown({lid: {{loc.id}}, cid:{{colony.id}}})">
+                                <img ng-src="img/colonies/{{colony.imgsil}}.jpg" style="height:8em;width:10em;">
+                            </a>
+                            <p class="item item-text-wrap" style="border:none; padding: 3px; text-align: center;">
+                                {{colony.name}}
+                            </p>
+                        </div>
+                    </div></div>
+                </div>
             </div>
-            <div class="col col-50">
-                <div ng-repeat="colony in undiscovered"><div ng-if="$odd" class="row">
-                    <div class="list card" style="margin:0; width:100%; height:100%;">
-                        <a class="item item-image" ui-sref="colony({lid: {{loc.id}}, cid:{{colony.id}}})">
-                            <img ng-src="img/colonies/{{colony.img}}.jpg" style="height:8em;width:10em;">
-                        </a>
-                        <p class="item item-text-wrap" style="border:none; padding: 3px; text-align: center;">
-                            {{colony.name}}
-                        </p>
-                    </div>
-                </div></div>
+            <div class="item item-divider">
+                Discovered Lichens
+            </div>
+            <div class="row">
+                <div class="col col-50">
+                    <div ng-repeat="colony in undiscovered"><div ng-if="$even" class="row">
+                        <div class="list card" style="margin:0; width:100%; height:100%;">
+                            <a class="item item-image" ui-sref="colony.known({lid: {{loc.id}}, cid:{{colony.id}}})">
+                                <img ng-src="img/colonies/{{colony.img}}.jpg" style="height:8em;width:10em;">
+                            </a>
+                            <p class="item item-text-wrap" style="border:none; padding: 3px; text-align: center;">
+                                {{colony.name}}
+                            </p>
+                        </div>
+                    </div></div>
+                </div>
+                <div class="col col-50">
+                    <div ng-repeat="colony in undiscovered"><div ng-if="$odd" class="row">
+                        <div class="list card" style="margin:0; width:100%; height:100%;">
+                            <a class="item item-image" ui-sref="colony.known({lid: {{loc.id}}, cid:{{colony.id}}})">
+                                <img ng-src="img/colonies/{{colony.img}}.jpg" style="height:8em;width:10em;">
+                            </a>
+                            <p class="item item-text-wrap" style="border:none; padding: 3px; text-align: center;">
+                                {{colony.name}}
+                            </p>
+                        </div>
+                    </div></div>
+                </div>
             </div>
         </div>
     </ion-content>
