--- a/www/pages/location.html
+++ b/www/pages/location.html
@@ -12,57 +12,72 @@
             <h3>{{loc.avail}}</h3>
         </div>
         <div id="Avail" class="hidden">
-            <div class="row">
-                <div class="col col-50">
-                    <div ng-repeat="colony in discovered"><div ng-if="$even" class="row">
-                        <div class="list card" style="margin:0; width:100%; height:100%;">
-                            <a class="item item-image" ui-sref="colony.unknown({lid: {{loc.id}}, cid:{{colony.id}}})">
-                                <img ng-src="img/colonies/{{colony.imgsil}}.jpg" style="height:8em;width:10em;">
-                            </a>
-                            <p class="item item-text-wrap" style="border:none; padding: 3px; text-align: center;">
-                                {{colony.name}}
-                            </p>
-                        </div>
-                    </div></div>
-                </div>
-                <div class="col col-50">
-                    <div ng-repeat="colony in discovered"><div ng-if="$odd" class="row">
-                        <div class="list card" style="margin:0; width:100%; height:100%;">
-                            <a class="item item-image" ui-sref="colony.unknown({lid: {{loc.id}}, cid:{{colony.id}}})">
-                                <img ng-src="img/colonies/{{colony.imgsil}}.jpg" style="height:8em;width:10em;">
-                            </a>
-                            <p class="item item-text-wrap" style="border:none; padding: 3px; text-align: center;">
-                                {{colony.name}}
-                            </p>
-                        </div>
-                    </div></div>
-                </div>
-            </div>
-            <div class="item item-divider">
-                Discovered Lichens
+            <div ng-if="undiscovered.length>0" class="item item-divider">
+                Undiscovered Lichen
             </div>
             <div class="row">
                 <div class="col col-50">
                     <div ng-repeat="colony in undiscovered"><div ng-if="$even" class="row">
-                        <div class="list card" style="margin:0; width:100%; height:100%;">
-                            <a class="item item-image" ui-sref="colony.known({lid: {{loc.id}}, cid:{{colony.id}}})">
-                                <img ng-src="img/colonies/{{colony.img}}.jpg" style="height:8em;width:10em;">
-                            </a>
-                            <p class="item item-text-wrap" style="border:none; padding: 3px; text-align: center;">
-                                {{colony.name}}
-                            </p>
+                        <div class="list card" style="margin:0;"
+                              ui-sref="colony.unknown({lid: {{loc.id}}, cid:{{colony.id}}})">
+                            <div class="item">
+                                <a class="item-image">
+                                    <img ng-src="img/colonies/{{colony.imgsil}}.jpg">
+                                </a>
+                                <p class="item-text-wrap text-center">
+                                    Colony {{colony.id}}
+                                </p>
+                            </div>
                         </div>
                     </div></div>
                 </div>
                 <div class="col col-50">
                     <div ng-repeat="colony in undiscovered"><div ng-if="$odd" class="row">
-                        <div class="list card" style="margin:0; width:100%; height:100%;">
-                            <a class="item item-image" ui-sref="colony.known({lid: {{loc.id}}, cid:{{colony.id}}})">
-                                <img ng-src="img/colonies/{{colony.img}}.jpg" style="height:8em;width:10em;">
-                            </a>
-                            <p class="item item-text-wrap" style="border:none; padding: 3px; text-align: center;">
-                                {{colony.name}}
-                            </p>
+                        <div class="list card" style="margin:0;"
+                              ui-sref="colony.unknown({lid: {{loc.id}}, cid:{{colony.id}}})">
+                            <div class="item">
+                                <a class="item-image">
+                                    <img ng-src="img/colonies/{{colony.imgsil}}.jpg">
+                                </a>
+                                <p class="item-text-wrap text-center">
+                                    Colony {{colony.id}}
+                                </p>
+                            </div>
+                        </div>
+                    </div></div>
+                </div>
+            </div>
+            <div ng-if="discovered.length>0" class="item item-divider">
+                Discovered Lichen
+            </div>
+            <div class="row">
+                <div class="col col-50">
+                    <div ng-repeat="colony in discovered"><div ng-if="$even" class="row">
+                        <div class="list card" style="margin:0;"
+                              ui-sref="colony.known({lid: {{loc.id}}, cid:{{colony.id}}})">
+                            <div class="item">
+                                <a class="item-image">
+                                    <img ng-src="img/colonies/{{colony.img}}.jpg">
+                                </a>
+                                <p class="item-text-wrap text-center">
+                                    Colony {{colony.name}}
+                                </p>
+                            </div>
+                        </div>
+                    </div></div>
+                </div>
+                <div class="col col-50">
+                    <div ng-repeat="colony in discovered"><div ng-if="$odd" class="row">
+                        <div class="list card" style="margin:0;"
+                              ui-sref="colony.known({lid: {{loc.id}}, cid:{{colony.id}}})">
+                            <div class="item">
+                                <a class="item-image">
+                                    <img ng-src="img/colonies/{{colony.img}}.jpg">
+                                </a>
+                                <p class="item-text-wrap text-center">
+                                    Colony {{colony.name}}
+                                </p>
+                            </div>
                         </div>
                     </div></div>
                 </div>
