--- a/www/index.html
+++ b/www/index.html
@@ -31,6 +31,8 @@
     <script src="//maps.google.com/maps/api/js"></script>
     <script src="//rawgit.com/allenhwkim/angularjs-google-maps/master/build/scripts/ng-map.min.js"></script>
 
+    <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+    
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/mapCtrl.js"></script>
