--- a/www/index.html
+++ b/www/index.html
@@ -32,6 +32,7 @@
     <script src="//rawgit.com/allenhwkim/angularjs-google-maps/master/build/scripts/ng-map.min.js"></script>
 
     <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+    <script src='js/angular-charts.min.js' type='text/javascript'></script>
     
     <!-- your app's js -->
     <script src="js/app.js"></script>
