--- a/www/pages/admin.html
+++ b/www/pages/admin.html
@@ -146,9 +146,18 @@
                   </textarea>
                 </span>
             </div>
-            <div class="col">
-                <bars-chart chart-data="myData"  ></bars-chart>
+            <div class="col" style="height:400px">
+                <select ng-model="chartType">
+		<option value="pie">pie</option>
+		<option value="bar">bar</option>
+		<option value="line">line</option>
+		<option value="point">point</option>
+		<option value="area">area</option>
+                </select>
+
+                <br />
+
+                <div id="chart1" ac-chart="chartType" ac-data="data1" ac-config="config1"></div>
             </div>
-        </div>
     </ion-content>
 </ion-view>
